--- a/documentation/components/AddAdComponent.html
+++ b/documentation/components/AddAdComponent.html
@@ -197,7 +197,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:19</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:34</a></div>
                             </td>
                         </tr>
 
@@ -302,8 +302,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="43"
-                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:43</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="58"
+                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:58</a></div>
                 </td>
             </tr>
 
@@ -343,8 +343,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="90"
-                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:90</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="105"
+                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:105</a></div>
                 </td>
             </tr>
 
@@ -409,8 +409,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="99"
-                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:99</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="114"
+                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:114</a></div>
                 </td>
             </tr>
 
@@ -475,8 +475,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="82"
-                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:82</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="97"
+                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:97</a></div>
                 </td>
             </tr>
 
@@ -516,8 +516,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="36"
-                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:36</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="51"
+                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:51</a></div>
                 </td>
             </tr>
 
@@ -557,8 +557,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="86"
-                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:86</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="101"
+                            class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:101</a></div>
                 </td>
             </tr>
 
@@ -627,10 +627,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:22</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>form que se usara para la creacion del ad</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -659,10 +665,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:26</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>imagen del advertisement</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -691,10 +703,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:18</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>file para usar el servicio de firestorage</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -718,10 +736,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:30</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Atributo que esconde y muestra el sidebar</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -750,10 +774,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/components/admin/ad/add-ad/add-ad.component.ts:34</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica si un elemento se esta updating</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -777,10 +807,25 @@ import { AngularFireStorage } from &quot;@angular/fire/storage&quot;;
 })
 export class AddAdComponent implements OnInit {
 
+  /**
+   * file para usar el servicio de firestorage
+   */
   selectedFile: File &#x3D; null;
+  /**
+   * form que se usara para la creacion del ad
+   */
   form: FormGroup;
+  /**
+   * imagen del advertisement
+   */
   main_image: String&#x3D;null;
+  /**
+   * Atributo que esconde y muestra el sidebar
+   */
   sidebar: Boolean;
+  /**
+   * atributo que indica si un elemento se esta updating
+   */
   updating:Boolean&#x3D;false;
 
 
