--- a/documentation/components/AdminHomeComponent.html
+++ b/documentation/components/AdminHomeComponent.html
@@ -203,7 +203,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:22</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:46</a></div>
                             </td>
                         </tr>
 
@@ -320,18 +320,26 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="44"
-                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:44</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="81"
+                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:81</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los bares de la base de datos y guarda la cantidad existente que se encuentra disponible
+para poder mostrarselo a l administrador</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -359,18 +367,26 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="58"
-                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:58</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="100"
+                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:100</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los tragos de la base de datos y guarda la cantidad existente que se encuentra disponible
+para poder mostrarselo a l administrador</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -398,14 +414,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="38"
-                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:38</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="70"
+                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:70</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Setea el atributo local que mueve el contenido cuando sale el sidebar</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -414,6 +432,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -425,6 +444,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>El evento que es pasado cuando el ícono del sidebar es clickeado</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -464,18 +487,26 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="72"
-                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:72</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="119"
+                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:119</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los usuarios de la base de datos y guarda la cantidad existente que se encuentra disponible
+para poder mostrarselo a l administrador</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -503,14 +534,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="32"
-                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:32</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="59"
+                            class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:59</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inicializa el componente</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -546,10 +579,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:34</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Donde se guarda la cantidad de bares activos de la pagina</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -578,10 +617,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:18</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si se sigue trayendo informacion de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -610,10 +655,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:38</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si ya se obtuvo la cantidad de bares</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -642,10 +693,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:42</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si ya se obtuvo la cantidad de tragos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -674,10 +731,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:46</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si ya se obtuvo la cantidad de usuarios</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -701,10 +764,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:30</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Donde guarda la cantidad de recetas activas de la pagina</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -728,10 +797,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:22</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si el sidebar esta abierto o no</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -755,10 +830,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/components/admin/admin-home/admin-home.component.ts:26</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Donde se guarda la cantidad de usuarios activos en la pagina</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -782,13 +863,37 @@ import { DrinkService } from &#x27;src/app/services/drink.service&#x27;;
 })
 export class AdminHomeComponent implements OnInit {
   //CAMBIAR A TRUE
+  /**
+   * Indica si se sigue trayendo informacion de la base de datos
+   */
   loading: Boolean &#x3D; false;
+  /**
+   * Indica si el sidebar esta abierto o no
+   */
   sidebar: Boolean;
+  /**
+   * Donde se guarda la cantidad de usuarios activos en la pagina
+   */
   users:number;
+  /**
+   * Donde guarda la cantidad de recetas activas de la pagina
+   */
   recipes:number;
+  /**
+   * Donde se guarda la cantidad de bares activos de la pagina
+   */
   bars:number;
+  /**
+   * Indica si ya se obtuvo la cantidad de bares
+   */
   loadingBars:Boolean&#x3D;true;
+  /**
+   * Indica si ya se obtuvo la cantidad de tragos
+   */
   loadingDrinks:Boolean&#x3D;true;
+  /**
+   * Indica si ya se obtuvo la cantidad de usuarios
+   */
   loadingUsers:Boolean&#x3D;true;
 
   constructor(private route: Router,
@@ -799,18 +904,31 @@ export class AdminHomeComponent implements OnInit {
 
   }
 
+  /**
+   * Inicializa el componente
+   */
   ngOnInit() {
     this.getBars();
     this.getDrinks();
     this.getUsers();
   }
 
+  /**
+   * Setea el atributo local que mueve el contenido cuando sale el sidebar
+   * @param {any} $event El evento que es pasado cuando el ícono del sidebar es clickeado
+   * @returns {void} 
+   */
   getMessage($event){
     if(screen.width&gt;640){
       this.sidebar &#x3D; $event;
     }
   }
 
+  /**
+     * Trae los bares de la base de datos y guarda la cantidad existente que se encuentra disponible
+     * para poder mostrarselo a l administrador
+     * @returns {void}
+     */
   getBars(){
     this._barService.getBars().subscribe((res:any) &#x3D;&gt; {
       let barAv &#x3D; [];
@@ -825,6 +943,11 @@ export class AdminHomeComponent implements OnInit {
     } )
   }
 
+  /**
+     * Trae los tragos de la base de datos y guarda la cantidad existente que se encuentra disponible
+     * para poder mostrarselo a l administrador
+     * @returns {void}
+     */
   getDrinks(){
     this._drinkService.getDrinks().subscribe((res:any) &#x3D;&gt; {
       let available &#x3D; [];
@@ -839,6 +962,11 @@ export class AdminHomeComponent implements OnInit {
     } )
   }
 
+  /**
+     * Trae los usuarios de la base de datos y guarda la cantidad existente que se encuentra disponible
+     * para poder mostrarselo a l administrador
+     * @returns {void}
+     */
   getUsers(){
     this._userService.getUsers().subscribe((res:any) &#x3D;&gt; {
       let available &#x3D; [];
