--- a/documentation/components/DetailBarComponent.html
+++ b/documentation/components/DetailBarComponent.html
@@ -305,20 +305,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="58"
-                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:58</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="63"
+                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:63</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Trae el bar de la base de datos</p>
+                    <div class="io-description"><p>Se trae el bar de detalle para mostrarlo</p>
 </div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -339,21 +344,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getMessage($event)</code>
+<code>getMessage($event: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="79"
-                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:79</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="91"
+                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:91</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Setea el atributo local que mueve el contenido cuando sale el sidebar</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -361,18 +368,27 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>$event</td>
+                                    <td>
+                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <p>El evento que es pasado cuando el ícono del sidebar es clickeado</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -412,20 +428,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="39"
-                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:39</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="43"
+                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:43</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Añade al array de las stars la cantidad de estrellas que tiene en manera de booleanos</p>
+                    <div class="io-description"><p>Cuenta las estrellas según el rating del bar para mostrarlo en el frontend</p>
 </div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -446,22 +467,22 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getZone(id_zone)</code>
+<code>getZone(id_zone: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="71"
-                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:71</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="78"
+                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:78</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Trae la zona en la cual esta el bar</p>
+                    <div class="io-description"><p>Se trae los datos de la zona a la cual pertenece el bar que está en detalle</p>
 </div>
 
                     <div class="io-description">
@@ -470,6 +491,7 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
                                     <td>Description</td>
                                 </tr>
@@ -477,6 +499,9 @@
                             <tbody>
                                 <tr>
                                     <td>id_zone</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
 
                                     <td>
                                         No
@@ -484,7 +509,7 @@
 
 
                                     <td>
-                                        <p>id de la zona del bar</p>
+                                        <p>El id de la zona del bar que está en detalle</p>
 
                                     </td>
                                 </tr>
@@ -526,20 +551,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="88"
-                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:88</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="101"
+                            class="link-to-prism">src/app/components/bars/detail-bar/detail-bar.component.ts:101</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Regresa a la vista anterior</p>
+                    <div class="io-description"><p>Navega a la lista de bares</p>
 </div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -794,20 +824,24 @@ export class DetailBarComponent implements OnInit {
 
   sidebar: Boolean;
 
-
   constructor(private svc: BarService, private route: Router, 
     private routeSV: ActivatedRoute, private zoneService: ZoneService) { }
-/**
- * 
- * Inicializa el componente
- */
+
+  /**
+   * Inicializa el componente
+   * 
+   */
   ngOnInit() {
+    /**
+     * Se trae toda la información del bar y su zona
+     */
     this.getBar();
   }
-/**
- * Añade al array de las stars la cantidad de estrellas que tiene en manera de booleanos
- * 
- */
+
+  /**
+   * Cuenta las estrellas según el rating del bar para mostrarlo en el frontend
+   * @returns {void}
+   */
   getStars(){
     var i;
     var aux: boolean;
@@ -823,10 +857,11 @@ export class DetailBarComponent implements OnInit {
     console.log(this.stars)
     this.loading &#x3D; false;
   }
-/**
- * Trae el bar de la base de datos
- * 
- */
+
+  /**
+   * Se trae el bar de detalle para mostrarlo
+   * @returns {void}
+   */
   getBar(){
     const id &#x3D; this.routeSV.snapshot.paramMap.get(&#x27;id&#x27;);
     this.svc.getBar(id).subscribe( (b:any) &#x3D;&gt; {
@@ -836,11 +871,13 @@ export class DetailBarComponent implements OnInit {
       this.getZone(this.bar.zone);
     })
   }
-/**
- * Trae la zona en la cual esta el bar
- * @param {string} id_zone id de la zona del bar
- */
-  getZone(id_zone){
+
+  /**
+   * Se trae los datos de la zona a la cual pertenece el bar que está en detalle
+   * @param {string} id_zone El id de la zona del bar que está en detalle
+   * @returns {void}
+   */
+  getZone(id_zone:string):void{
     
     this.zoneService.getZone(id_zone).subscribe((res:any) &#x3D;&gt; {
       this.zone&#x3D;{...res.data};
@@ -848,15 +885,21 @@ export class DetailBarComponent implements OnInit {
     })
   }
 
-  getMessage($event){
+  /**
+   * Setea el atributo local que mueve el contenido cuando sale el sidebar
+   * @param {any} $event El evento que es pasado cuando el ícono del sidebar es clickeado
+   * @returns {void} 
+   */
+  getMessage($event:any):void{
     if(screen.width&gt;640){
       this.sidebar &#x3D; $event;
     }
   }
-/**
- * Regresa a la vista anterior
- * 
- */
+
+  /**
+   * Navega a la lista de bares
+   * @returns {void} 
+   */
   goBack(){
     this.route.navigate([&quot;bars/&quot;])
   }
