--- a/documentation/components/EditAdComponent.html
+++ b/documentation/components/EditAdComponent.html
@@ -203,7 +203,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:18</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:36</a></div>
                             </td>
                         </tr>
 
@@ -320,8 +320,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="114"
-                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:114</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="132"
+                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:132</a></div>
                 </td>
             </tr>
 
@@ -386,8 +386,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="63"
-                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:63</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="81"
+                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:81</a></div>
                 </td>
             </tr>
 
@@ -427,8 +427,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="43"
-                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:43</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="61"
+                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:61</a></div>
                 </td>
             </tr>
 
@@ -468,8 +468,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="123"
-                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:123</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="141"
+                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:141</a></div>
                 </td>
             </tr>
 
@@ -534,8 +534,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="99"
-                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:99</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="117"
+                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:117</a></div>
                 </td>
             </tr>
 
@@ -575,8 +575,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="35"
-                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:35</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="53"
+                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:53</a></div>
                 </td>
             </tr>
 
@@ -616,8 +616,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="110"
-                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:110</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="128"
+                            class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:128</a></div>
                 </td>
             </tr>
 
@@ -686,10 +686,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:20</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>advertisement que se editara</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -713,10 +719,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:24</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>form que se usara para la creacion del ad</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -745,10 +757,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:16</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica si se han cargado los datos traidos de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -772,10 +790,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:28</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>imagen del advertisement</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -799,10 +823,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:32</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Atributo que esconde y muestra el sidebar</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -831,10 +861,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/app/components/admin/ad/edit-ad/edit-ad.component.ts:36</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica si un elemento se esta updating</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -856,11 +892,29 @@ import { AngularFireStorage } from &#x27;@angular/fire/storage&#x27;;
   styleUrls: [&#x27;./edit-ad.component.scss&#x27;]
 })
 export class EditAdComponent implements OnInit {
+  /**
+   * atributo que indica si se han cargado los datos traidos de la base de datos
+   */
   loading: Boolean &#x3D; true;
+/**
+ * advertisement que se editara
+ */
   ad: advertisement;
+  /**
+   * form que se usara para la creacion del ad
+   */
   form: FormGroup;
+  /**
+   * imagen del advertisement
+   */
   main_image: String;
+/**
+   * Atributo que esconde y muestra el sidebar
+   */
   sidebar: Boolean;
+  /**
+   * atributo que indica si un elemento se esta updating
+   */
   updating:Boolean&#x3D;false;
 
   constructor(
