--- a/documentation/components/EditUserComponent.html
+++ b/documentation/components/EditUserComponent.html
@@ -330,14 +330,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="139"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:139</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="159"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:159</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Muestra los inputs para cambiar la contraseña</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -371,14 +373,17 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="143"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:143</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="167"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:167</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Verifica que se haya ingresado la contraseña vieja para permitir hacer la nueva. Si no es correcta te muestra el error,
+si todo está bien llama al método que realmente hace el cambio</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
@@ -410,14 +415,17 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="71"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:71</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="81"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:81</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>emplea el método del servicio para actualizar la info que el usuario cambió. Si todo sale bien, te actualiza y lleva al perfil,
+si hay un error te lo avisa y no actualiza</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -449,14 +457,17 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="110"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:110</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="124"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:124</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Una vez verificada la constraseña vieja, 
+recibe la nueva, la encripta, la cambia en la base de datos y te desloguea</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -481,21 +492,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getMessage($event)</code>
+<code>getMessage($event: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="159"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:159</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="188"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:188</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Setea el atributo local que mueve el contenido cuando sale el sidebar</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -503,18 +516,27 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>$event</td>
+                                    <td>
+                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <p>El evento que es pasado cuando el ícono del sidebar es clickeado</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -554,14 +576,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="52"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:52</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="58"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:58</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Se trae la información del usuario a través de su id</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -593,14 +617,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="135"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:135</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="152"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:152</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega al perfil</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -632,14 +658,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="48"
-                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:48</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="51"
+                            class="link-to-prism">src/app/components/profile-page/edit-user/edit-user.component.ts:51</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inicializa al componente, trayendose la información del usuario</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -928,10 +956,16 @@ export class EditUserComponent implements OnInit {
     });
   }
 
+  /**
+   * Inicializa al componente, trayendose la información del usuario
+   */
   ngOnInit() {
     this.getUser();
   }
 
+  /**
+   * Se trae la información del usuario a través de su id
+   */
   getUser() {
     const id &#x3D; this.routeSV.snapshot.paramMap.get(&quot;id&quot;);
     this.service.getUser(id).subscribe((res: any) &#x3D;&gt; {
@@ -951,6 +985,10 @@ export class EditUserComponent implements OnInit {
   //   this.selectedFile &#x3D; event.target.files[0];
   // }
 
+/**
+ * emplea el método del servicio para actualizar la info que el usuario cambió. Si todo sale bien, te actualiza y lleva al perfil,
+ * si hay un error te lo avisa y no actualiza
+ */
   editUser() {
     var user: user &#x3D; {
       f_name: this.form.value.f_name,
@@ -990,6 +1028,10 @@ export class EditUserComponent implements OnInit {
     } 
   }
 
+  /**
+   * Una vez verificada la constraseña vieja, 
+   * recibe la nueva, la encripta, la cambia en la base de datos y te desloguea
+   */
   editUserPassword(){
     const salt &#x3D; bcrypt.genSaltSync(10);
     var user: user &#x3D; {
@@ -1015,14 +1057,24 @@ export class EditUserComponent implements OnInit {
 
   }
 
+  /**
+   * Navega al perfil
+   */
   goBack() {
     this.route.navigate([&quot;profile&quot;]);
   }
 
+  /**
+   * Muestra los inputs para cambiar la contraseña
+   */
   changeP(){
     this.changingP &#x3D; !this.changingP;
   }
 
+  /**
+   * Verifica que se haya ingresado la contraseña vieja para permitir hacer la nueva. Si no es correcta te muestra el error,
+   * si todo está bien llama al método que realmente hace el cambio
+   */
   async doChangeP(){
     let x &#x3D; await this.auth_svc.getPassword().toPromise();
     console.log(&quot;yuju &quot; + x);
@@ -1039,7 +1091,12 @@ export class EditUserComponent implements OnInit {
     }
   }
 
-  getMessage($event){
+  /**
+   * Setea el atributo local que mueve el contenido cuando sale el sidebar
+   * @param {any} $event El evento que es pasado cuando el ícono del sidebar es clickeado
+   * @returns {void} 
+   */
+  getMessage($event: any): void{
     if(screen.width&gt;640){
       this.sidebar &#x3D; $event;
     }
