--- a/documentation/components/FilterParentComponent.html
+++ b/documentation/components/FilterParentComponent.html
@@ -236,7 +236,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:23</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:53</a></div>
                             </td>
                         </tr>
 
@@ -329,8 +329,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="82"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:82</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="112"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:112</a></div>
                 </td>
             </tr>
 
@@ -406,8 +406,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="162"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:162</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="192"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:192</a></div>
                 </td>
             </tr>
 
@@ -447,8 +447,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="218"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:218</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="248"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:248</a></div>
                 </td>
             </tr>
 
@@ -488,8 +488,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="142"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:142</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="172"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:172</a></div>
                 </td>
             </tr>
 
@@ -529,8 +529,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="267"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:267</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="297"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:297</a></div>
                 </td>
             </tr>
 
@@ -595,8 +595,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="319"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:319</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="349"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:349</a></div>
                 </td>
             </tr>
 
@@ -636,8 +636,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="111"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:111</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="141"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:141</a></div>
                 </td>
             </tr>
 
@@ -713,8 +713,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="208"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:208</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="238"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:238</a></div>
                 </td>
             </tr>
 
@@ -786,8 +786,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="31"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:31</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="61"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:61</a></div>
                 </td>
             </tr>
 
@@ -827,8 +827,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="242"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:242</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="272"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:272</a></div>
                 </td>
             </tr>
 
@@ -904,8 +904,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="177"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:177</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="207"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:207</a></div>
                 </td>
             </tr>
 
@@ -945,8 +945,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="46"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:46</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="76"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:76</a></div>
                 </td>
             </tr>
 
@@ -1022,8 +1022,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="291"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:291</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="321"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:321</a></div>
                 </td>
             </tr>
 
@@ -1063,8 +1063,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="259"
-                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:259</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="289"
+                            class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:289</a></div>
                 </td>
             </tr>
 
@@ -1108,10 +1108,16 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:17</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Lista de las categorias de los ingredientes</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1140,10 +1146,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:25</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>lista de los ingredientes por los que filtraremos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1172,10 +1184,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:37</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>lista de los ingredientes ya seleccionados en el proceso de filtrado</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1204,10 +1222,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:29</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>lista de los ingredientes disponibles de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1236,10 +1260,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:33</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>lista de los ingredientes de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1268,10 +1298,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:45</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Lista de los ingredientes ordenados como los usaremos en el html</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1294,10 +1330,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:21</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica si se han cargado los datos traidos de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1326,10 +1368,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:23</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:53</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>campo que guarda lso cambios de la busqueda de ingredientes</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1353,10 +1401,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:49</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Atributo que esconde y muestra el sidebar</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1385,10 +1439,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/components/drinks/filter-parent/filter-parent.component.ts:41</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>lista de los ingredientes que contienen las cosas buscadas en el searchbar</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1411,15 +1471,45 @@ import { style } from &#x27;@angular/animations&#x27;;
   styleUrls: [&#x27;./filter-parent.component.scss&#x27;]
 })
 export class FilterParentComponent implements OnInit {
+   /**
+ * Lista de las categorias de los ingredientes
+ */
   categories;
+  /**
+ * atributo que indica si se han cargado los datos traidos de la base de datos
+ */
   loading&#x3D;true
+  /**
+ * lista de los ingredientes por los que filtraremos
+ */
   filter&#x3D;[];
+   /**
+ * lista de los ingredientes disponibles de la base de datos
+ */
   ingredients:ingredient[]&#x3D;[];
+   /**
+ * lista de los ingredientes de la base de datos
+ */
   ingredientsA:ingredient[]&#x3D;[];
+  /**
+ * lista de los ingredientes ya seleccionados en el proceso de filtrado
+ */
   ing_search&#x3D;[];
+  /**
+ * lista de los ingredientes que contienen las cosas buscadas en el searchbar
+ */
   temp_i_s&#x3D;[];
+  /**
+ * Lista de los ingredientes ordenados como los usaremos en el html
+ */
   list&#x3D;[];
+  /**
+ * Atributo que esconde y muestra el sidebar
+ */
   sidebar: Boolean;
+  /**
+ * campo que guarda lso cambios de la busqueda de ingredientes
+ */
   search_bar&#x3D;&quot;&quot;
 
   constructor(private ing_service:IngredientService,private router:Router,private cat_service:CategoriesService) { }
