--- a/documentation/components/HeaderComponent.html
+++ b/documentation/components/HeaderComponent.html
@@ -436,14 +436,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="31"
-                            class="link-to-prism">src/app/components/header/header.component.ts:31</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="37"
+                            class="link-to-prism">src/app/components/header/header.component.ts:37</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Cada vez que se escribe una letra en el input buscador, envía la palabra que está en ese input al servicio del filtro</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -468,21 +470,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>newMessage(i)</code>
+<code>newMessage(i: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="57"
-                            class="link-to-prism">src/app/components/header/header.component.ts:57</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="74"
+                            class="link-to-prism">src/app/components/header/header.component.ts:74</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Envía la palabra completa sobre la cual hace click en la lista de filtros al servicio de filtros</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -490,18 +494,27 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>i</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <p>la palabra que clickeó</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -541,14 +554,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="27"
-                            class="link-to-prism">src/app/components/header/header.component.ts:27</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="30"
+                            class="link-to-prism">src/app/components/header/header.component.ts:30</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inicializa al componente, suscribiendolo al servicio del filtro, en el cual los componentes de las listas también están suscritos</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -580,14 +595,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="63"
-                            class="link-to-prism">src/app/components/header/header.component.ts:63</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="83"
+                            class="link-to-prism">src/app/components/header/header.component.ts:83</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Envía al servicio del filtro la palabra que está en el input cuando hace click en la tecla Enter</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -612,21 +629,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>sendChangedFilter(i)</code>
+<code>sendChangedFilter(i: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="69"
-                            class="link-to-prism">src/app/components/header/header.component.ts:69</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="93"
+                            class="link-to-prism">src/app/components/header/header.component.ts:93</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Envía el nuevo parámetro por el cual se filtrará a las listas que tienen varias opciones de filtrado</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -634,18 +653,27 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>i</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <p>la opción de filtrado</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -685,14 +713,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="39"
-                            class="link-to-prism">src/app/components/header/header.component.ts:39</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="48"
+                            class="link-to-prism">src/app/components/header/header.component.ts:48</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Oculta o muestra la lista de filtros</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -724,14 +754,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="46"
-                            class="link-to-prism">src/app/components/header/header.component.ts:46</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="58"
+                            class="link-to-prism">src/app/components/header/header.component.ts:58</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Oculta o muestra la lista de opciones que se tienen para filtrar</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -889,10 +921,16 @@ export class HeaderComponent implements OnInit {
 
   constructor(private data: SharedService) { }
 
+  /**
+   * Inicializa al componente, suscribiendolo al servicio del filtro, en el cual los componentes de las listas también están suscritos
+   */
   ngOnInit() {
     this.data.currentMsg.subscribe(m &#x3D;&gt; this.filterPost&#x3D;m)
   }
 
+  /**
+   * Cada vez que se escribe una letra en el input buscador, envía la palabra que está en ese input al servicio del filtro
+   */
   makeChange(){
     if(this.filteringOptions){
       this.filteringOptions&#x3D;false;
@@ -901,6 +939,9 @@ export class HeaderComponent implements OnInit {
     this.data.changeMsg((&lt;HTMLInputElement&gt;document.getElementById(&quot;search&quot;)).value) 
    }
 
+   /**
+    * Oculta o muestra la lista de filtros
+    */
    showDrop(){
      if(this.filteringOptions){
        this.filteringOptions&#x3D;false;
@@ -908,6 +949,9 @@ export class HeaderComponent implements OnInit {
      this.touched &#x3D; !this.touched;
    }
 
+   /**
+    * Oculta o muestra la lista de opciones que se tienen para filtrar
+    */
    showDropForFilteringOp(){
      if(this.touched){
        this.touched&#x3D;false;
@@ -919,19 +963,31 @@ export class HeaderComponent implements OnInit {
   //    return (&lt;HTMLInputElement&gt;document.getElementById(&quot;search&quot;)).value;
   //  }
 
-   newMessage(i){
+  /**
+   * Envía la palabra completa sobre la cual hace click en la lista de filtros al servicio de filtros
+   * @param {string} i la palabra que clickeó
+   * @returns {void}
+   */
+   newMessage(i:string):void{
      console.log(i)
      this.data.changeMsg(i)
      this.touched&#x3D;false;
    }
 
+  /**
+   * Envía al servicio del filtro la palabra que está en el input cuando hace click en la tecla Enter
+   */
    pressEnter(){
     this.touched&#x3D;false;
     (&lt;HTMLInputElement&gt;document.getElementById(&quot;search&quot;)).blur();
     
    }
 
-   sendChangedFilter(i){
+   /**
+    * Envía el nuevo parámetro por el cual se filtrará a las listas que tienen varias opciones de filtrado
+    * @param {string} i la opción de filtrado
+    */
+   sendChangedFilter(i: string){
     this.filteringOptions &#x3D; !this.filteringOptions;
     console.log(i);
      this.filt.emit(i);
@@ -1025,7 +1081,7 @@ export class HeaderComponent implements OnInit {
     // margin-top: 4.7rem;
     // margin-right: 50%;
     width: 20rem;
-    margin-left: 2rem;
+    margin-left: 4.5rem;
     overflow-y: auto;
     overflow-x: hidden;
 }
