--- a/documentation/components/ProfileComponent.html
+++ b/documentation/components/ProfileComponent.html
@@ -338,14 +338,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="148"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:148</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="176"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:176</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Elige un quote aleatorio para mostrar</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -370,21 +372,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>detail(id)</code>
+<code>detail(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="97"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:97</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="122"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:122</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Te lleva a la receta del trago con el id</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -392,18 +396,27 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <p>el id del trago</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -443,8 +456,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="101"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:101</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="126"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:126</a></div>
                 </td>
             </tr>
 
@@ -525,14 +538,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="81"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:81</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="102"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:102</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Se trae los tragos y llena el atributo local con los favoritos del usuario para mostrarlos</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -557,21 +572,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getMessage($event)</code>
+<code>getMessage($event: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="75"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:75</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="93"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:93</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Setea el atributo local que mueve el contenido cuando sale el sidebar</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -579,18 +596,27 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>$event</td>
+                                    <td>
+                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <p>El evento que es pasado cuando el ícono del sidebar es clickeado</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -630,14 +656,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="51"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:51</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="57"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:57</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Borra los datos de local storage y navega al login, terminando tu sesión</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -669,14 +697,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="57"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:57</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="66"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:66</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Se trae los datos del usuario de la base de datos</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -708,14 +738,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="158"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:158</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="192"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:192</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la lista de tragos</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -740,21 +772,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>goEdit(id)</code>
+<code>goEdit(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="71"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:71</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="84"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:84</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la ruta de editar perfil con el id del usuario para mostrar su información</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -762,18 +796,27 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>id</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <p>el id del usuario logueado</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -813,8 +856,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="121"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:121</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="146"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:146</a></div>
                 </td>
             </tr>
 
@@ -883,14 +926,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="45"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:45</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="48"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:48</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inicializa al componente, elige el quote a mostrar y se trae al usuario</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -922,14 +967,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="154"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:154</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="185"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:185</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Oculta o muestra los tragos favoritos del usuario en la vista para móvil</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -961,8 +1008,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="128"
-                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:128</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="153"
+                            class="link-to-prism">src/app/components/profile-page/profile/profile.component.ts:153</a></div>
                 </td>
             </tr>
 
@@ -1342,18 +1389,27 @@ export class ProfileComponent implements OnInit {
 
   constructor(private router: Router, private auth_svc: AuthService, private service: DrinkService, private user_sv:UserService ) {}
 
+  /**
+   * Inicializa al componente, elige el quote a mostrar y se trae al usuario
+   */
   ngOnInit() {
     this.chooseQuote();
     this.userLoading &#x3D; true;
     this.getProfile();
   }
 
+  /**
+   * Borra los datos de local storage y navega al login, terminando tu sesión
+   */
   getOut() {
     this.auth_svc.logout();
     console.log(&quot;Cerraste sesión&quot;);
     this.router.navigateByUrl(&quot;/login&quot;);
   }
 
+  /**
+   * Se trae los datos del usuario de la base de datos
+   */
   getProfile() {
     this.auth_svc.getProfile().subscribe(
       (profile:any) &#x3D;&gt; {
@@ -1368,16 +1424,28 @@ export class ProfileComponent implements OnInit {
     );
   }
 
-  goEdit(id){
+  /**
+   * Navega a la ruta de editar perfil con el id del usuario para mostrar su información
+   * @param {string} id el id del usuario logueado
+   */
+  goEdit(id: string){
     this.router.navigate([&#x27;edit-user&#x27;, id]);
   }
 
-  getMessage($event){
+  /**
+   * Setea el atributo local que mueve el contenido cuando sale el sidebar
+   * @param {any} $event El evento que es pasado cuando el ícono del sidebar es clickeado
+   * @returns {void} 
+   */
+  getMessage($event: any): void{
     if(screen.width&gt;640){
       this.sidebar &#x3D; $event;
     }
   }
 
+  /**
+   * Se trae los tragos y llena el atributo local con los favoritos del usuario para mostrarlos
+   */
   getDrinks() {
     
     this.service.getDrinks().subscribe((res: any) &#x3D;&gt; {
@@ -1394,7 +1462,11 @@ export class ProfileComponent implements OnInit {
     })
   }
 
-  detail(id){
+  /**
+   * Te lleva a la receta del trago con el id
+   * @param {string} id el id del trago
+   */
+  detail(id: string){
     this.router.navigate([&#x27;drink/&#x27;, id]);
   }
 
@@ -1445,16 +1517,25 @@ export class ProfileComponent implements OnInit {
     });
   }
 
+  /**
+   * Elige un quote aleatorio para mostrar
+   */
   chooseQuote(){
     this.randomQuote &#x3D; this.quotes[Math.floor(Math.random() * this.quotes.length)];
     console.log(this.randomQuote);
   }
 
 
+  /**
+   * Oculta o muestra los tragos favoritos del usuario en la vista para móvil
+   */
   showFavorites(){
     this.favorites&#x3D;!this.favorites;
   }
 
+  /**
+   * Navega a la lista de tragos
+   */
   goDrinks(){
     this.router.navigate([&quot;drinks&quot;]);
   }
