--- a/documentation/components/DrinksListComponent.html
+++ b/documentation/components/DrinksListComponent.html
@@ -130,19 +130,10 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#aux">aux</a>
-                            </li>
-                            <li>
                                 <a href="#drinks">drinks</a>
                             </li>
                             <li>
                                 <a href="#drinksA">drinksA</a>
-                            </li>
-                            <li>
-                                <a href="#fav_img">fav_img</a>
-                            </li>
-                            <li>
-                                <a href="#filterPost">filterPost</a>
                             </li>
                             <li>
                                 <a href="#loading">loading</a>
@@ -218,7 +209,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:24</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:39</a></div>
                             </td>
                         </tr>
 
@@ -335,8 +326,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="45"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:45</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="61"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:61</a></div>
                 </td>
             </tr>
 
@@ -408,8 +399,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="54"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:54</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="70"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:70</a></div>
                 </td>
             </tr>
 
@@ -501,8 +492,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="132"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:132</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="148"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:148</a></div>
                 </td>
             </tr>
 
@@ -542,8 +533,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="154"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:154</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="170"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:170</a></div>
                 </td>
             </tr>
 
@@ -608,8 +599,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="112"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:112</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="128"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:128</a></div>
                 </td>
             </tr>
 
@@ -649,8 +640,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="163"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:163</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="179"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:179</a></div>
                 </td>
             </tr>
 
@@ -690,8 +681,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="150"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:150</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="166"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:166</a></div>
                 </td>
             </tr>
 
@@ -731,8 +722,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="78"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:78</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="94"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:94</a></div>
                 </td>
             </tr>
 
@@ -808,8 +799,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="36"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:36</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="52"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:52</a></div>
                 </td>
             </tr>
 
@@ -849,8 +840,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="89"
-                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:89</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="105"
+                            class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:105</a></div>
                 </td>
             </tr>
 
@@ -878,27 +869,6 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-                        <a name="aux"></a>
-                        <span class="name">
-                            <b>
-                            aux</b>
-                            <a href="#aux"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:21</a></div>
-                            </td>
-                        </tr>
-
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
                         <a name="drinks"></a>
                         <span class="name">
                             <b>
@@ -920,10 +890,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:19</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Lista de los drinks traidos de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -952,74 +928,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:31</a></div>
                             </td>
                         </tr>
 
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
                 <tr>
                     <td class="col-md-4">
-                        <a name="fav_img"></a>
-                        <span class="name">
-                            <b>
-                            fav_img</b>
-                            <a href="#fav_img"><span class="icon ion-ios-link"></span></a>
-                        </span>
+                        <div class="io-description"><p>Lista de los drinks disponibles traidos de la base de datos</p>
+</div>
                     </td>
                 </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Default value : </i><code>&quot;Favorite&quot;</code>
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:24</a></div>
-                            </td>
-                        </tr>
-
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="filterPost"></a>
-                        <span class="name">
-                            <b>
-                            filterPost</b>
-                            <a href="#filterPost"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Default value : </i><code>&quot;qlqsa&quot;</code>
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:22</a></div>
-                            </td>
-                        </tr>
-
 
             </tbody>
         </table>
@@ -1048,10 +966,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:23</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica cuando se hayan traido todas las cosas de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1075,10 +999,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:27</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que muestra y esconde el sidebar</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1102,10 +1032,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:23</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/components/drinks/drinks-list/drinks-list.component.ts:39</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>usuario que se encuentra loggeado en el momento</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -1130,15 +1066,31 @@ import { UserService} from &#x27;src/app/services/user.service&#x27;
   styleUrls: [&#x27;./drinks-list.component.scss&#x27;]
 })
 export class DrinksListComponent implements OnInit {
-
+/**
+ * Lista de los drinks traidos de la base de datos
+ */
   drinks: drink[]&#x3D;[];
+  /**
+ * atributo que indica cuando se hayan traido todas las cosas de la base de datos
+ */
   loading: Boolean &#x3D; true;
+  /**
+ * atributo que muestra y esconde el sidebar
+ */
   sidebar: Boolean;
+  /**
+ *  Lista de los drinks disponibles traidos de la base de datos
+ */
   drinksA: drink[] &#x3D;[];
-  aux;
+  /**
+ *  @ignore
+ */
   filterPost: string &#x3D; &quot;qlqsa&quot;;
+  /**
+ * usuario que se encuentra loggeado en el momento
+ */
   user:user;
-  fav_img&#x3D;&quot;Favorite&quot;
+  
   
 
   constructor(private service: DrinkService, 
