--- a/documentation/components/ListAdComponent.html
+++ b/documentation/components/ListAdComponent.html
@@ -203,7 +203,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:16</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:31</a></div>
                             </td>
                         </tr>
 
@@ -284,8 +284,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="99"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:99</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="114"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:114</a></div>
                 </td>
             </tr>
 
@@ -325,8 +325,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="90"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:90</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="105"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:105</a></div>
                 </td>
             </tr>
 
@@ -398,8 +398,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="33"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:33</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="48"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:48</a></div>
                 </td>
             </tr>
 
@@ -439,8 +439,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="103"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:103</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="118"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:118</a></div>
                 </td>
             </tr>
 
@@ -505,8 +505,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="114"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:114</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="129"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:129</a></div>
                 </td>
             </tr>
 
@@ -546,8 +546,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="74"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:74</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="89"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:89</a></div>
                 </td>
             </tr>
 
@@ -619,8 +619,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="58"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:58</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="73"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:73</a></div>
                 </td>
             </tr>
 
@@ -692,8 +692,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="24"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:24</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="39"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:39</a></div>
                 </td>
             </tr>
 
@@ -737,10 +737,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:19</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>lista de advertisements traidas de la base de datps</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -764,10 +770,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:23</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que nos indica que ad se esta updating</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -790,10 +802,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:15</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica si se han cargado los datos traidos de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -817,10 +835,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:27</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Atributo que esconde y muestra el sidebar</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -849,10 +873,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:31</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica si un elemento se esta updating</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -873,10 +903,25 @@ import { Router } from &#x27;@angular/router&#x27;;
   styleUrls: [&#x27;./list-ad.component.scss&#x27;]
 })
 export class ListAdComponent implements OnInit {
+  /**
+   * atributo que indica si se han cargado los datos traidos de la base de datos
+   */
   loading&#x3D;true;
+  /**
+   *  lista de advertisements traidas de la base de datps
+   */
   ads:advertisement[];
+  /**
+   * atributo que nos indica que ad se esta updating
+   */
   adSelected:advertisement;
+  /**
+   * Atributo que esconde y muestra el sidebar
+   */
   sidebar: Boolean;
+  /**
+   * atributo que indica si un elemento se esta updating
+   */
   updating:Boolean&#x3D;false;
 
   constructor(private service: AdvertisementService, private route: Router) { }
