--- a/documentation/components/ListDrinkComponent.html
+++ b/documentation/components/ListDrinkComponent.html
@@ -203,7 +203,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:16</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:32</a></div>
                             </td>
                         </tr>
 
@@ -284,8 +284,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="89"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:89</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="105"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:105</a></div>
                 </td>
             </tr>
 
@@ -325,8 +325,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="81"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:81</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="97"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:97</a></div>
                 </td>
             </tr>
 
@@ -398,8 +398,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="30"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:30</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="46"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:46</a></div>
                 </td>
             </tr>
 
@@ -439,8 +439,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="93"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:93</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="109"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:109</a></div>
                 </td>
             </tr>
 
@@ -505,8 +505,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="102"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:102</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="118"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:118</a></div>
                 </td>
             </tr>
 
@@ -546,8 +546,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="67"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:67</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="83"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:83</a></div>
                 </td>
             </tr>
 
@@ -619,8 +619,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="52"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:52</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="68"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:68</a></div>
                 </td>
             </tr>
 
@@ -692,8 +692,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="23"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:23</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="39"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:39</a></div>
                 </td>
             </tr>
 
@@ -737,10 +737,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:20</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>lista de drinks traidas de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -764,10 +770,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:24</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica el drink en el cual se hara el update</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -796,10 +808,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:16</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que indica si se han cargado los datos traidos de la base de datos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -823,10 +841,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:28</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que muestra y esconde el sidebar </p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -855,10 +879,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:32</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>atributo que muestra si se esta updating un trago</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -879,10 +909,26 @@ import { Router } from &quot;@angular/router&quot;;
   styleUrls: [&quot;./list-drink.component.scss&quot;],
 })
 export class ListDrinkComponent implements OnInit {
+
+  /**
+   * atributo que indica si se han cargado los datos traidos de la base de datos
+   */
   loading: Boolean &#x3D; true;
+  /**
+   * lista de drinks traidas de la base de datos
+   */
   drinks: drink[];
+  /**
+   * atributo que indica el drink en el cual se hara el update
+   */
   drinkSelected: drink;
+  /**
+   * atributo que muestra y esconde el sidebar 
+   */
   sidebar: Boolean;
+  /**
+   * atributo que muestra si se esta updating un trago
+   */
   updating:Boolean&#x3D;false;
 
   constructor(private service: DrinkService, private route: Router) {}
