--- a/documentation/components/TestBarComponent.html
+++ b/documentation/components/TestBarComponent.html
@@ -160,9 +160,6 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#getOut">getOut</a>
-                            </li>
-                            <li>
                                 <a href="#makeChange">makeChange</a>
                             </li>
                             <li>
@@ -292,45 +289,6 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="getOut"></a>
-                    <span class="name">
-                        <b>
-                            getOut
-                        </b>
-                        <a href="#getOut"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>getOut()</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="33"
-                            class="link-to-prism">src/app/components/test-bar/test-bar.component.ts:33</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
                     <a name="makeChange"></a>
                     <span class="name">
                         <b>
@@ -349,14 +307,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="39"
-                            class="link-to-prism">src/app/components/test-bar/test-bar.component.ts:39</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="50"
+                            class="link-to-prism">src/app/components/test-bar/test-bar.component.ts:50</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Oculta o muestra el sidebar y emite este estado al componente que se esté mostrando para que se mueva</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -390,14 +350,17 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="22"
-                            class="link-to-prism">src/app/components/test-bar/test-bar.component.ts:22</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="26"
+                            class="link-to-prism">src/app/components/test-bar/test-bar.component.ts:26</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inicializa el componente, mostrando las opciones de navegación dependiendo de si el usuario está logueado o no, y si es
+administrador o no.</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
@@ -615,6 +578,10 @@ export class TestBarComponent implements OnInit {
 
   constructor(private auth_svc: AuthService, private router: Router) { }
 
+  /**
+   * Inicializa el componente, mostrando las opciones de navegación dependiendo de si el usuario está logueado o no, y si es
+   * administrador o no.
+   */
   async ngOnInit() {
 
     if (!this.auth_svc.loggedIn()) {
@@ -626,18 +593,25 @@ export class TestBarComponent implements OnInit {
       this.isAdmin &#x3D; x;
     }
   }
+
+  /**
+   * @ignore
+   */
   getOut() {
     this.auth_svc.logout();
     console.log(&quot;Cerraste sesión&quot;);
     this.router.navigateByUrl(&quot;/login&quot;);
   }
 
- makeChange(){
+  /**
+   * Oculta o muestra el sidebar y emite este estado al componente que se esté mostrando para que se mueva
+   */
+  makeChange(){
 
-  this.sidebar_left &#x3D; !this.sidebar_left;   
-  this.message.emit(this.sidebar_left)
-     
- }
+    this.sidebar_left &#x3D; !this.sidebar_left;   
+    this.message.emit(this.sidebar_left)
+      
+  }
 
 }
 </code></pre>
@@ -657,7 +631,7 @@ export class TestBarComponent implements OnInit {
             d&#x3D;&quot;M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z&quot; /&gt;
         &lt;/svg&gt; 
     &lt;/label&gt;
-    &lt;div [ngStyle]&#x3D;&quot;{&#x27;left.rem&#x27;: !sidebar_left? &#x27;-16&#x27; : &#x27;0&#x27;}&quot; class&#x3D;&quot;sidebar overflow-y-scroll sm:overflow-y-auto&quot;&gt;
+    &lt;div [ngStyle]&#x3D;&quot;{&#x27;left.rem&#x27;: !sidebar_left? &#x27;-16&#x27; : &#x27;0&#x27;}&quot; class&#x3D;&quot;z-10 sidebar overflow-y-scroll sm:overflow-y-auto&quot;&gt;
         &lt;header class&#x3D;&quot;text-4xl text-white h-16&quot;&gt;&lt;/header&gt;
 
         &lt;ul&gt;
@@ -950,7 +924,7 @@ label .cancel-svg{
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div id="barComputer">    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check" >    <label for="check">         <svg [ngStyle]="{\'left.rem\': sidebar_left? \'13\': \'-13\'}" class="fill-current h-10 w-10 outline-none cancel-svg" >            <path            d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />        </svg>          <svg [ngStyle]="{\'left.rem\': !sidebar_left? \'1\': \'12\', \'opacity\':!sidebar_left? \'1\': \'0\', \'pointer-events\':!sidebar_left? \'auto\': \'none\'}"         class="fill-current h-10 w-10 outline-none btn-svg">            <path            d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />        </svg>     </label>    <div [ngStyle]="{\'left.rem\': !sidebar_left? \'-16\' : \'0\'}" class="sidebar overflow-y-scroll sm:overflow-y-auto">        <header class="text-4xl text-white h-16"></header>        <ul>            <li><a routerLink="/drinks" routerLinkActive="active"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>            <li><a routerLink="/bars" routerLinkActive="active"><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>            <li><a routerLink="/games" routerLinkActive="active"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>            <li><a routerLink="/post-drink" routerLinkActive="active"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>            <li><a routerLink="/drinkly-team" routerLinkActive="active"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>            <li *ngIf="isAdmin"><a routerLink="/admin" routerLinkActive="active"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>            <li *ngIf="isLogged"><a routerLink="/profile" routerLinkActive="active"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>            <li *ngIf="!isLogged"><a routerLink="/login" routerLinkActive="active"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>        </ul>    </div></div><div id="barPhone">    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check2">    <label for="check2">         <svg  [ngStyle]="{\'left.%\': sidebar_left? \'89\': \'-13\'}" class="fill-current h-10 w-10 outline-none cancel-svg">            <path            d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />        </svg>          <svg [ngStyle]="{\'left.rem\': !sidebar_left? \'1\': \'12\', \'opacity\':!sidebar_left? \'1\': \'0\', \'pointer-events\':!sidebar_left? \'auto\': \'none\'}"         class="fill-current h-10 w-10 outline-none btn-svg" >            <path            d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />        </svg>     </label>    <div [ngStyle]="{\'left.vw\': !sidebar_left? \'-100\' : \'0\'}" class="sidebar overflow-y-scroll sm:overflow-y-auto">        <header class="text-4xl text-white h-16"></header>        <ul>            <li><a routerLink="/drinks" routerLinkActive="active"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>            <li><a routerLink="/bars" routerLinkActive="active"><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>            <li><a routerLink="/games" routerLinkActive="active"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>            <li><a routerLink="/post-drink" routerLinkActive="active"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>            <li><a routerLink="/drinkly-team" routerLinkActive="active"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>            <li *ngIf="isAdmin"><a routerLink="/admin" routerLinkActive="active"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>            <li *ngIf="isLogged"><a routerLink="/profile" routerLinkActive="active"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>            <li *ngIf="!isLogged"><a routerLink="/login" routerLinkActive="active"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>        </ul>    </div></div><!-- <div [ngStyle]="{\'margin-left.rem\': !sidebar_left? \'0\': \'16\'}" class="move">       <app-header></app-header>    <app-footer></app-footer></div> --></div>'
+        var COMPONENT_TEMPLATE = '<div><div id="barComputer">    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check" >    <label for="check">         <svg [ngStyle]="{\'left.rem\': sidebar_left? \'13\': \'-13\'}" class="fill-current h-10 w-10 outline-none cancel-svg" >            <path            d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />        </svg>          <svg [ngStyle]="{\'left.rem\': !sidebar_left? \'1\': \'12\', \'opacity\':!sidebar_left? \'1\': \'0\', \'pointer-events\':!sidebar_left? \'auto\': \'none\'}"         class="fill-current h-10 w-10 outline-none btn-svg">            <path            d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />        </svg>     </label>    <div [ngStyle]="{\'left.rem\': !sidebar_left? \'-16\' : \'0\'}" class="z-10 sidebar overflow-y-scroll sm:overflow-y-auto">        <header class="text-4xl text-white h-16"></header>        <ul>            <li><a routerLink="/drinks" routerLinkActive="active"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>            <li><a routerLink="/bars" routerLinkActive="active"><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>            <li><a routerLink="/games" routerLinkActive="active"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>            <li><a routerLink="/post-drink" routerLinkActive="active"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>            <li><a routerLink="/drinkly-team" routerLinkActive="active"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>            <li *ngIf="isAdmin"><a routerLink="/admin" routerLinkActive="active"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>            <li *ngIf="isLogged"><a routerLink="/profile" routerLinkActive="active"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>            <li *ngIf="!isLogged"><a routerLink="/login" routerLinkActive="active"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>        </ul>    </div></div><div id="barPhone">    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check2">    <label for="check2">         <svg  [ngStyle]="{\'left.%\': sidebar_left? \'89\': \'-13\'}" class="fill-current h-10 w-10 outline-none cancel-svg">            <path            d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />        </svg>          <svg [ngStyle]="{\'left.rem\': !sidebar_left? \'1\': \'12\', \'opacity\':!sidebar_left? \'1\': \'0\', \'pointer-events\':!sidebar_left? \'auto\': \'none\'}"         class="fill-current h-10 w-10 outline-none btn-svg" >            <path            d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />        </svg>     </label>    <div [ngStyle]="{\'left.vw\': !sidebar_left? \'-100\' : \'0\'}" class="sidebar overflow-y-scroll sm:overflow-y-auto">        <header class="text-4xl text-white h-16"></header>        <ul>            <li><a routerLink="/drinks" routerLinkActive="active"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>            <li><a routerLink="/bars" routerLinkActive="active"><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>            <li><a routerLink="/games" routerLinkActive="active"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>            <li><a routerLink="/post-drink" routerLinkActive="active"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>            <li><a routerLink="/drinkly-team" routerLinkActive="active"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>            <li *ngIf="isAdmin"><a routerLink="/admin" routerLinkActive="active"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>            <li *ngIf="isLogged"><a routerLink="/profile" routerLinkActive="active"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>            <li *ngIf="!isLogged"><a routerLink="/login" routerLinkActive="active"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>        </ul>    </div></div><!-- <div [ngStyle]="{\'margin-left.rem\': !sidebar_left? \'0\': \'16\'}" class="move">       <app-header></app-header>    <app-footer></app-footer></div> --></div>'
     var COMPONENTS = [{'name': 'AddAdComponent', 'selector': 'app-add-ad'},{'name': 'AddBarComponent', 'selector': 'app-add-bar'},{'name': 'AddDrinkComponent', 'selector': 'app-add-drink'},{'name': 'AddIngredientComponent', 'selector': 'app-add-ingredient'},{'name': 'AddZoneComponent', 'selector': 'app-add-zone'},{'name': 'AdminHeaderComponent', 'selector': 'app-admin-header'},{'name': 'AdminHomeComponent', 'selector': 'app-admin-home'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BarsListComponent', 'selector': 'app-bars-list'},{'name': 'DetailBarComponent', 'selector': 'app-detail-bar'},{'name': 'DrinklyTeamComponent', 'selector': 'app-drinkly-team'},{'name': 'DrinksFilterComponent', 'selector': 'app-drinks-filter'},{'name': 'DrinksListComponent', 'selector': 'app-drinks-list'},{'name': 'EditAdComponent', 'selector': 'app-edit-ad'},{'name': 'EditBarComponent', 'selector': 'app-edit-bar'},{'name': 'EditDrinkComponent', 'selector': 'app-edit-drink'},{'name': 'EditGameComponent', 'selector': 'app-edit-game'},{'name': 'EditIngredientComponent', 'selector': 'app-edit-ingredient'},{'name': 'EditUserComponent', 'selector': 'app-edit-user'},{'name': 'EditZoneComponent', 'selector': 'app-edit-zone'},{'name': 'FilterChildComponent', 'selector': 'app-filter-child'},{'name': 'FilterParentComponent', 'selector': 'app-filter-parent'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'JuegosComponent', 'selector': 'app-juegos'},{'name': 'ListAdComponent', 'selector': 'app-list-ad'},{'name': 'ListBarComponent', 'selector': 'app-list-bar'},{'name': 'ListDrinkComponent', 'selector': 'app-list-drink'},{'name': 'ListGameComponent', 'selector': 'app-list-game'},{'name': 'ListIngredientComponent', 'selector': 'app-list-ingredient'},{'name': 'ListUserComponent', 'selector': 'app-list-user'},{'name': 'ListZoneComponent', 'selector': 'app-list-zone'},{'name': 'LoaderComponent', 'selector': 'app-loader'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavbarComponent', 'selector': 'app-navbar'},{'name': 'NotFoundComponent', 'selector': 'app-not-found'},{'name': 'PostBusinessComponent', 'selector': 'app-post-business'},{'name': 'PostDrinkComponent', 'selector': 'app-post-drink'},{'name': 'ProfileComponent', 'selector': 'app-profile'},{'name': 'RecipeComponent', 'selector': 'app-recipe'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'RequiredFieldComponent', 'selector': 'app-required-field'},{'name': 'ShowFilterComponent', 'selector': 'app-show-filter'},{'name': 'SidebarComponent', 'selector': 'app-sidebar'},{'name': 'TestBarComponent', 'selector': 'app-test-bar'},{'name': 'UploadingLoaderComponent', 'selector': 'app-uploading-loader'}];
     var DIRECTIVES = [{'name': 'AgeValidatorDirective', 'selector': '[isAdult]'},{'name': 'clickedOutDirective', 'selector': '[clickedOut]'},{'name': 'ExternalUrlDirective', 'selector': 'a[appExternalUrl]'},{'name': 'passwordValidator', 'selector': '[passwordValid]'}];
     var ACTUAL_COMPONENT = {'name': 'TestBarComponent'};
